--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "rune-games-sdk": "^4.9.6"
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "rune-games-sdk": "^4.11.3"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
@@ -25,6 +25,7 @@
     "eslint": "7.22.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
+    "eslint-plugin-rune": "^0.1.10",
     "typescript": "^5.0.2",
     "vite": "^4.3.2",
     "vite-plugin-rune": "^0.1.1"
